WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310096
The autoplay + loop attributes don't work well with WebModelPlayer
https://bugs.webkit.org/show_bug.cgi?id=310096
Summary
The autoplay + loop attributes don't work well with WebModelPlayer
Etienne
Reported
2026-03-17 06:25:30 PDT
The animation only plays once.
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2026-03-17 06:33:58 PDT
<
rdar://problem/172648404
>
Etienne
Comment 2
2026-03-17 06:34:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60765
EWS
Comment 3
2026-03-17 09:26:19 PDT
Committed
309409@main
(fe84c07021c2): <
https://commits.webkit.org/309409@main
> Reviewed commits have been landed. Closing PR #60765 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug