The autoplay + loop attributes don't work well with WebModelPlayer https://bugs.webkit.org/show_bug.cgi?id=310096 <rdar://172648404>

Reviewed by Mike Wyrzykowski.

Make sure the loop value gets propagated once the model is ready.
Before it would silently be ignored by nil coalescing.

* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::WebModelPlayer::load):

Canonical link: https://commits.webkit.org/309409@main